dnl sub: segy basic calculator
AC_INIT(sub.c)
PROG="sub"
AC_SUBST(PROG)dnl
AC_PROG_YACC
AC_PROG_CC
AC_TEST_PROGRAM([main () {
  /* Are we little or big endian?  From Harbison&Steele.  */
  union
  {
    long l;
    char c[sizeof (long)];
  } u;
  u.l = 1;
  exit (u.c[sizeof (long) - 1] == 1);
}], echo cpu is littleendian
ENDISH=i386
, echo cpu is bigendian
ENDISH=sun4
)
AC_SUBST(ENDISH)
AC_OUTPUT(Makefile)

